# c-prg

./: README.md  build.sh
arrays/: CMakeLists.txt
arrays/dynamic_array/: core.h
pong/: CMakeLists.txt  main.c
pong/game_engine/: engine.c  engine.h
pong/utils/: input.c  input.h  result.c  result.h
test/: .gitignore  CMakeCache.txt  CMakeLists.txt  a.out  main.c
